<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTunes Store Apps Listing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">Create New Account</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_view_favories">View Favorites</string>
    <string name="menu_clear_favorites">Clear Favorites</string>
    <string name="menu_view_shared">View Shared</string>
    <string name="menu_clear_shared">Clear Shared</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_preview">Preview Activity</string>
    <string name="title_activity_web_view">WebViewActivity</string>

</resources>