<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.test.MainActivity" >

    <item
        android:id="@+id/action_view_all"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/menu_view_all"/>

    <item
        android:id="@+id/action_view_favorites"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/menu_view_favories"/>
    <item
        android:id="@+id/action_clear_favorites"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/menu_clear_favorites"/>
    <item
        android:id="@+id/action_view_shared"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_view_shared"/>
    
    <item
        android:id="@+id/action_clear_shared"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/menu_clear_shared"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    
</menu>
